--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <h3>Hello World!</h3>
             </div>
             <div class="my-style">
-                <h3>Jane Doe: Loves <em>dolphins</em> in Sarasota, FL</h3>
+                <h3>Jane Austen: Loves <em>speeding</em> through red lights on Fridays</h3>
             </div>
             <div class="code-ninja-style">
-                <h3>This is first time using GitHub!</h3>
+                <h3>I have asthma!</h3>
             </div>
             <div class="codys-styles">
                 <h3>That's very exciting!</h3>
@@ -31,3 +31,5 @@
     </main>
 </body>
 </html>
+git add -A
+git push origin main
